--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,6 +4,12 @@ parameters:
 #    parameter_name: value
 
 services:
+    app.twig_extension:
+        class: AppBundle\Twig\UrlAutoConverterTwigExtension
+        public: false
+        tags:
+            - { name: twig.extension }
+
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
