--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -2,7 +2,7 @@
 parameters:
     database_host: 127.0.0.1
     database_port: null
-    database_name: todolist
+    database_name: github_todolist
     database_user: root
     database_password: null
     mailer_transport: smtp
