--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,9 +1,15 @@
 # To get started with security, check out the documentation:
 # http://symfony.com/doc/current/book/security.html
 security:
-
+    encoders:
+        AppBundle\Entity\User:
+            algorithm: bcrypt
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
+        user_db_provider:
+            entity:
+                class: AppBundle:User
+                property: username
         in_memory:
             memory: ~
 
@@ -15,6 +21,19 @@ security:
 
         main:
             anonymous: ~
+            form_login:
+                default_target_path: /
+                login_path: login
+                check_path: login
+            logout:
+                path: /logout
+                target: /
+            provider: user_db_provider
+    access_control:
+        - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/create_account$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
+
             # activate different ways to authenticate
 
             # http_basic: ~
