--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -33,6 +33,7 @@ security:
         - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/create_account$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/share/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/profile/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
 
             # activate different ways to authenticate
